<resources>
    <string name="app_name">StudentNote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Kamil Biegański Production</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="type">Lab</string>
    <string name="description">Sala 108</string>
    <string name="hour">08:15</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add">Dodaj</string>
    <string name="fast_dialog">Szybka notatka</string>
    <string name="call_dialog">Zadzwoń</string>
    <string name="notif_dialog">Notatka z datą</string>
    <string name="call_hint">Zadzwoń do…</string>
    <string name="phone_hint">888 888 888</string>
    <string name="note_hint">Wpisz notatkę…</string>
    <string name="_15">15</string>
    <string name="lis">lis</string>
</resources>
