<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp">
            <TextView
                android:id="@+id/text_day_of_the_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginEnd="3dp"/>
            <TextView
                android:id="@+id/text_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lis"
                />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/text_fast_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/hello_blank_fragment"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>


</android.support.v7.widget.CardView>