<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:minHeight="70dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_graduation"
            android:contentDescription="@string/hello_blank_fragment"
            android:layout_weight="0"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textAllCaps="true"
                    android:textColor="@color/red"/>
                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/text_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    />
                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/text_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="0dp"
                />
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>